--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,8 @@
 h1{
-    color: aquamarine;
+    color: aquamarine; text-decoration: underline;
+}
+p {
+    font-size: xx-large;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    text-align: center;
 }
