--- a/css/styles.css
+++ b/css/styles.css
@@ -2,11 +2,13 @@ table{
     width: 300px;
     height: 100px;
     border: 2px solid black;
+    width: 40%;
 }
-#title{
+#month_name{
     border-bottom: 2px solid black;
+    font-size: xx-large;
 }
-.body-color{
+.bcolor{
     background-color: pink;
 }
 td{
@@ -15,6 +17,7 @@ td{
 }
 h1 {
     color: cornflowerblue;
+    margin-left: auto;
 }
 td {
     text-align: center;
