--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,48 @@
-input{
-    text-align: right;
+* {
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
 }
-#submit{
+.buttonn{
+    border: 2px solid transparent;
+    border-color: none;
+    border-radius: 10px;
+    width: 200px;
+    height: 60px;
+    font-size: 30px;
+    font-weight: bolder;
+    color: black;
+    text-decoration: none;
+}
+.buttonn:hover{
+    cursor: pointer;
+}
+
+.center{
+    position: absolute;
+    right: 20%;
+    top: 20%;
+    width: 960px;
+    height: 400px;
+ 
+}
+.media{
+    display: flex;margin-bottom: 30px;
+    width: 100%;
+    justify-content: space-around;
+    
+}
+#ghub{
+    font-size: 50px;
+    text-decoration: none;
     color: white;
-    background-color: rgb(202, 9, 9);
-    width: 60px; height: 25px; border-radius: 4px;
+}
+.button{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+input#orderNumber{
+    text-align: center;
 }
